finish react 1st section

--- a/templates/cards-jquery.html
+++ b/templates/cards-jquery.html
@@ -19,7 +19,7 @@
 
 {% block js %}
   <script>
-    const getCardData() {
+    function getCardData() {
       // Get the up to date card data from DB.
 
       $.get('/cards.json', insertCardData);
